src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <picklist>
            <picklistValues>
                <fullName>(Afan) Oromo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abkhazian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afrikaans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amharic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aragonese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assamese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avestan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aymara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bambara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bashkir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarusian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bengali; Bangla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bislama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bokmål, Norwegian; Norwegian Bokmål</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazilian Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burmese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodian (Central Khmer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalan</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>Aluminium Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buildings and Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cables and Cable Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cement Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaborative Production Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooling Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric Vehicle Charging Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generator Circuit Breakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Voltage Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insulation Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Sciences Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Voltage Products and Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Power Transmission Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Voltage Products and Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metallurgy Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metals Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motion Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors and Generators</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>1339 - Non-Core Various</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1342 - Various</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1722 - Thermal &amp; Water Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1723 - Power and Water Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1724 - Renewable Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1728 - Automation Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2106 - Gas Insulated Switchgear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2108 - HV Breakers &amp; Modules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2111 - Common Apparatus &amp; Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2115 - Generator Circuit Breakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2127 - Other High Voltage Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2128 - Capacitors and Filters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2129 - Instrument Transformers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2132 - HV Testing Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2214 - Offshore Wind Connections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2215 - HVDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2217 - FACTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2221 - OWC Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2222 - HVDC Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2223 - FACTS Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2224 - Power Cables Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2401 - Distribution Transformers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2404 - Small Power Transformers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2408 - Large and Medium Power Transformers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2409 - Dry Transformers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2413 - Transformer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2425 - Insulation and Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2451 - Domestic Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2617 - Domestic Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2657 - High Voltage Service</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Responsible__c</fullName>
        <description>This field, will capture the information (mainly an email address) from the CCDv2 proposed responsible Customer Support member.</description>
        <inlineHelpText>This field, will capture the information (mainly an email address) from the CCDv2 proposed responsible Customer Support member.</inlineHelpText>
        <label>Proposed Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Private__c</fullName>
        <label>Public/Private Company</label>
        <picklist>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchasing_power__c</fullName>
        <description>Lead Qualification Field (Sales &amp; Marketing)</description>
        <inlineHelpText>Can the contact/organization make a purchase decision?</inlineHelpText>
        <label>Purchasing power</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ready_to_convert__c</fullName>
        <description>This checkbox is supporting the Convert Lead Button in order to make sure, that all fields has been filled in order to convert the lead</description>
        <formula>AND(
    NOT(
        OR(
            ISBLANK(TEXT(Purchasing_power__c)), 
            ISBLANK(TEXT(Budget__c)) , 
            ISBLANK(TEXT(Fit__c)) , 
            ISBLANK(TEXT(Positioning__c)),
            ISBLANK(Timeframe__c),
            ISBLANK(Interest_need__c),
            ISBLANK(City),
            ISBLANK(Street),
ISBLANK(Email)
        )
    ),
    OR(
        TEXT(Status)=&quot;Contacted&quot;,
        TEXT(Status)=&quot;Qualified&quot;
)
)</formula>
        <inlineHelpText>HIDDEN</inlineHelpText>
        <label>Ready to convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordType_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>IF ( Deactivate__c = False,
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Account Active&quot;) &amp; &quot; Read /Write&quot;,
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Account Inactive&quot;) &amp; &quot; Read Only&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefererUrl__c</fullName>
        <description>This field will be filled by the CCDv2 Email handler and is describing from which ABB public page the inquiry contact has been initiated</description>
        <inlineHelpText>This field will be filled by the CCDv2 Email handler and is describing from which ABB public page the inquiry contact has been initiated</inlineHelpText>
        <label>RefererUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field can be used to assign a lead to an existing account. This process is needed, as contact center members are not allowed / in the shape of creating an opportunity against an existing account. 

This field also makes it possible to create a new Lead, even if the Account / Contact is already in the system. The Duplication will allow the creation, if this field is populated.</description>
        <inlineHelpText>Please use this field to relate a Lead to an existing account to identify a new opportunity on an existing account.</inlineHelpText>
        <label>Related existing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Existing_Account_Type__c</fullName>
        <formula>TEXT(Related_Account__r.Account_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Existing Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_existing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field can be used to assign a lead to an existing contact. This process is needed, as contact center members are not allowed / in the shape of creating an opportunity against an existing accounts.&amp; contacts 

This field also makes it possible to create a new Lead, even if the Account / Contact is already in the system. The Duplication will allow the creation, if this field is populated.</description>
        <inlineHelpText>Please use this field to relate a Lead to an existing contact to identify a new opportunity on an existing account.</inlineHelpText>
        <label>Related existing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Detail__c</fullName>
        <description>Note: Other values might be:

Technical Inquiry
Warranty Claim
Delivery
Complaint
Service Request</description>
        <label>Request Detail</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frame Agreement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>This fields was also referred as &quot;Request Type CC Tier1&quot;</description>
        <inlineHelpText>CC Tier1</inlineHelpText>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Score_Qualification__c</fullName>
        <description>Lead Scoring Field (Sales &amp; Marketing)</description>
        <formula>Weight_Purchasing_Power__c + Weight_Budget__c + Weight_Positioning__c + Weight_Fit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score-Qualification</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spam__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Status) &amp;&quot; &quot;&amp; First_Response_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>(only for Contact Centre)</description>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Technical_wDescription__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is to be hidden and  is used in the Weight-Description formula, that is used to calculate the Lead Scoring. (only for Sales &amp; Marketing)</description>
        <label>Technical_wDescription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timeframe_Approaching__c</fullName>
        <description>This is used to identify Leads with a Timeframe approaching within 30 days</description>
        <formula>TODAY() + 30 &gt;  Timeframe__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timeframe Approaching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timeframe_Past__c</fullName>
        <description>This is used to identify Leads with a Timeframe date in the past</description>
        <formula>TODAY() &gt; Timeframe__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timeframe Past</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timeframe__c</fullName>
        <label>Timeframe</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unqualifying_Reason__c</fullName>
        <description>(only for Sales &amp; Marketing)</description>
        <inlineHelpText>This fields is mandatory for Unqualified Leads only!</inlineHelpText>
        <label>Unqualifying Reason</label>
        <picklist>
            <picklistValues>
                <fullName>No interest in business with ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No interest in product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gap between our offering and requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products/factories not qualified/approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No decision making power/no authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact is not responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB business guidelines (e.g. country restriction)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative business track record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead already served through other ABB sales (systems/products)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved by Contact Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not interesting to ABB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weight_Budget__c</fullName>
        <description>Lead Scoring Field (Sales &amp; Marketing)</description>
        <formula>IF (ISPICKVAL( Budget__c , &quot;Yes&quot;), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weight-Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_Fit__c</fullName>
        <description>Lead Scoring Field (Sales &amp; Marketing)</description>
        <formula>IF (ISPICKVAL( Fit__c , &quot;Yes&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weight-Fit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_Positioning__c</fullName>
        <description>Lead Scoring Field (Sales &amp; Marketing)</description>
        <formula>IF (ISPICKVAL( Positioning__c , &quot;Yes&quot;), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weight-Positioning</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_Purchasing_Power__c</fullName>
        <description>Lead Scoring Field (Sales &amp; Marketing)</description>
        <formula>IF ( ISPICKVAL( Purchasing_power__c , &quot;YES&quot;), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weight-Purchasing Power</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>With_Opp__c</fullName>
        <description>This field is to be used to capture which of the Leads have been converted with Opportunity creation. 
To be HIDDEN and used in Lead History Reports!</description>
        <formula>IF (NOT(ISBLANK(ConvertedOpportunityId )), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>With Opp</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Contact_Center</fullName>
        <active>true</active>
        <businessProcess>Contact Center</businessProcess>
        <description>Lead to be used by the Contact Center</description>
        <label>Contact Center</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact_Center_Read_Only</fullName>
        <active>true</active>
        <businessProcess>Contact Center</businessProcess>
        <description>Lead to be used by the Contact Center (Read Only)</description>
        <label>Contact Center (Read Only)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Marketing</fullName>
        <active>true</active>
        <businessProcess>Sales %26 Marketing</businessProcess>
        <description>Lead to be used by the Sales &amp; Marketing Team</description>
        <label>Sales &amp; Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_and_Marketing_Read_Only</fullName>
        <active>true</active>
        <businessProcess>Sales %26 Marketing</businessProcess>
        <description>Lead to be used by the Sales &amp; Marketing (Read Only)</description>
        <label>Sales &amp; Marketing (Read Only)</label>
    </recordTypes>
	<listViews>
        <fullName>Mass_Disable_for_NPS</fullName>
        <columns>FULL_NAME</columns>
        <columns>Originating_Country__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Applicable_for_NPS_Survey__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicable_for_NPS_Survey__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NPS_ID__c</field>
            <operation>equals</operation>
        </filters>
        <label>05. Mass Disable for NPS</label>
        <language>en_US</language>
    </listViews>
	<listViews>
        <fullName>Ready_for_NPS</fullName>
        <columns>FULL_NAME</columns>
        <columns>Originating_Country__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NPS_Ready__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NPS_ID__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Open</value>
        </filters>
        <label>04. Ready for NPS</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Address_Quality_Other</fullName>
        <active>true</active>
        <description>All Address fields need to be entered</description>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),
NOT($Setup.Validation_Override__c.Exclude__c),
ISPICKVAL(Status, &quot;Qualified&quot;),
OR(
AND(
ISBLANK (Country),
OR(
NOT(ISBLANK (Street)),
NOT(ISBLANK (City))
)
),
AND(
OR(
ISBLANK (City),
ISBLANK (Street)
),
OR(
Country &lt;&gt; &quot;Canada&quot;,
Country &lt;&gt; &quot;United States&quot;
),
NOT(ISBLANK(Country))
)
)
)</errorConditionFormula>
        <errorMessage>Address: Country, City, and Street are required!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Address_Quality_US_Canada</fullName>
        <active>true</active>
        <description>All Address fields need to be entered</description>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),
   (NOT($Setup.Validation_Override__c.Exclude__c )),
    NOT(CONTAINS(RecordType.Name,&apos;Contact Center&apos;)),
OR (AND (ISBLANK (Country),
         OR(NOT(ISBLANK (Street)),
            NOT(ISBLANK (City)),
            NOT(ISBLANK( State )),
            NOT(ISBLANK(  PostalCode  ))
            )
         ),

    AND( OR ( Country = &quot;United States&quot;,
              Country = &quot;Canada&quot;),
         OR ( ISBLANK( Street ),
              ISBLANK( City ),
              ISBLANK( State ),
              ISBLANK(  PostalCode  )             
             )
        )
    )
)</errorConditionFormula>
        <errorMessage>Address: State, City, ZIP Code and Street are required!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Address_Quality_Upon_Conversion</fullName>
        <active>true</active>
        <description>Address  fields must be entered before Lead conversion</description>
        <errorConditionFormula>IF( AND(NOT($User.AccountMerge_Override__c), ( TEXT(Status) = &quot;Qualified&quot;), 
          OR ( ISBLANK( Street ),
          ISBLANK( City ),
          ISBLANK( Country ),
          AND ( OR ( Country = &quot;United States&quot;, 
                    Country = &quot;Canada&quot;
                   ),
               OR( ISBLANK( State ),
                   ISBLANK( PostalCode )
                  )
              )
        )
     ),
   true, 
   false)</errorConditionFormula>
        <errorMessage>Address details missing: Please return to the Lead and amend the data accordingly!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Address_no_At</fullName>
        <active>true</active>
        <description>City, Street or ZIP Code may not contain the @-character</description>
        <errorConditionFormula>IF ( AND(NOT($User.AccountMerge_Override__c), ( NOT( OR ( ISBLANK(City), 
                     ISBLANK(PostalCode), 
                     ISBLANK(Street)
                    )
               )), 
           OR ( CONTAINS( City , &quot;@&quot;), 
                CONTAINS( PostalCode , &quot;@&quot;),
                CONTAINS( Street , &quot;@&quot;)
               )
          , NOT($Setup.Validation_Override__c.Exclude__c) ),
     true, 
     false
    )</errorConditionFormula>
        <errorMessage>Address: City, Street or ZIP Code may not contain the @ character!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Avoid_qualified_if_not_contacted</fullName>
        <active>true</active>
        <description>This validation rule makes sure, that a lead cannot set to qualified, if it was not previously in the status contacted</description>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),(ISPICKVAL(PRIORVALUE(Status),&quot;Open&quot;)),
ISPICKVAL(Status,&quot;Qualified&quot;))</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>You can not set the status to qualified, if You did not contact the lead. Please track an Activity (Call, Mail) and set the Lead to contacted first</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_edit_Converted_Leads</fullName>
        <active>true</active>
        <description>This rule will prevent users from updating leads which are converted to case</description>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),
  ISPICKVAL(PRIORVALUE(Status), &apos;Qualified: Case created&apos;),
  !$Setup.Validation_Override__c.Exclude__c
)</errorConditionFormula>
        <errorMessage>You cannot modify Leads which are &apos;Qualified: Case Created&apos;. You can search for related case using Lead Number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>City_and_Street</fullName>
        <active>true</active>
        <description>City and Street may not be the same.</description>
        <errorConditionFormula>IF( AND(NOT($User.AccountMerge_Override__c),( City =  Street), 
         NOT ( ISBLANK( City )),
         NOT ( ISBLANK( Street))
        ),
     true, 
     false)</errorConditionFormula>
        <errorDisplayField>Street</errorDisplayField>
        <errorMessage>City and Street fields may not be the same!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Country_empty</fullName>
        <active>false</active>
        <description>Country must be present
2014.11.27  - This validation is included already in validation &quot;Address_Quality_Upon_Conversion&quot;</description>
        <errorConditionFormula>AND (IsConverted = TRUE,
     ISBLANK( Country )
    )</errorConditionFormula>
        <errorMessage>Please check: Before Converting a Lead, you must select a value for  the field Country!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_required_when_Qualified</fullName>
        <active>true</active>
        <description>Validates, that the phone number and email is present, when status is qualified</description>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),
NOT($Setup.Validation_Override__c.Exclude__c),
NOT(CONTAINS(RecordType.DeveloperName,&apos;Contact_Center&apos;) ), 
OR(ISBLANK(Email)),
OR(ISPICKVAL(Status,&quot;Contacted&quot;),ISPICKVAL(Status,&quot;Qualified&quot;)))</errorConditionFormula>
        <errorMessage>Please make sure, that You have a valid email entered, when approaching the status &quot;Contacted&quot; or &quot;Qualified&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LeadPhone_Format</fullName>
        <active>true</active>
        <description>Makes sure, that the phone number format is correct</description>
        <errorConditionFormula>AND( NOT($User.AccountMerge_Override__c),
NOT($Setup.Validation_Override__c.Exclude__c),
NOT(CONTAINS(RecordType.DeveloperName, &apos;Contact_Center&apos;) ), 
NOT(ISBLANK(Phone)), 
NOT(REGEX(Phone,&quot;^(\\+\\d{1,3}\\s?)\\(?\\d{1,4}\\)?[\\s\\.\\-]?\\d{1,4}[\\s\\.\\-]?\\d{1,4}$&quot;)) 
)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>When entering a phone number lease correct the phone number using this format guidance: (e.g. +41 123 123456), starting with &quot;+&quot;, allowed characters are (). - 0-9 and white spaces thereafter</errorMessage>
    </validationRules>
</CustomObject>